--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,9 @@
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
+    "recoil": "^0.7.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
