--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@mui/material": "^5.15.18",
     "formik": "^2.4.6",
     "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
+    "recoil": "^0.7.7",
     "yup": "^1.4.0"
   }
 }
