--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT = 8000
-MONGODB_URL = mongodb+srv://mrsanthosh13:1234567890@cluster0.drlsko3.mongodb.net/presidio?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET = saran
+MONGODB_URL = mongodb+srv://shreeja:2580@cluster0.rtmxviz.mongodb.net/houses?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET = shreeja
